<resources>
    <string name="app_name">Ficheros</string>

    <string name="botónAñadir">Añadir</string>
    <string name="opcionVaciar">Vaciar Fichero</string>
    <string name="hintTexto">Texto a añadir</string>
    <string name="txtOnStart">Pulsa para mostrar el contenido del fichero</string>
    <string name="txtFicheroVacio">El fichero está vacío</string>
    <string name="txtErrorEscribir">No puedo escribir en la memoria externa</string>
    <string name="opcionAjustes">Ajustes</string>
    <string name="almacenamientoSD">Almacenamiento en tarjeta SD</string>
    <string name="comentarioSD">Si se activa esta opcion se almacenara la informacion en la tarjeta SD (si esta disponible)</string>
    <string name="nombreDelFichero">Nombre del fichero</string>
    <string name="comentarioNombre">Nombre del fichero en el que se guardara la informacion</string>
    <string name="ajustes">Opciones de Almacenamiento</string>
    <string name="comentarioInicial">Opciones relativas al almacenamiento de ficheros</string>
    <string name="ejemploDelNombre">mi_fichero_miw.txt</string>
    <string name="gestionar">Gestionar los ficheros</string>
    <string name="comentarioGestionar">Se mostra los ficheros generados y permite eliminar todos o solo algunos de los mismos</string>
    <string name="mostrar">Mostra todos los ficheros generados de la memoria interna y externa</string>
    <string name="eliminar">Eliminar todos los ficheros de datos propios de la aplicación</string>


</resources>
